@@ -1114,6 +1114,10 @@ class TinyMCEEditor(widgets.Textarea):
         return context
 
 
+class IntegerPercentInput(widgets.NumberInput):
+    template_name = 'creme_core/forms/widgets/percent.html'
+
+
 class ColorInput(widgets.Input):
     input_type = 'color'
     template_name = 'creme_core/forms/widgets/color.html'
